estimate time with motion equation &&fixing bugs